Finish working on Lab 4

--- a/Lab4/store_style.css
+++ b/Lab4/store_style.css
@@ -1,5 +1,40 @@
 td
 {
 	padding: 0 15px 0 15px;
+        font-size: 20px;
 	
+}
+
+body
+{
+        background-image: url("background.jpg");   
+    
+}
+
+button
+{
+    	background-color: #4CAF50; 
+	color: white;
+	padding: 16px 32px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 16px;
+	margin: 4px 2px;
+	-webkit-transition-duration: 0.01s;
+}
+
+h2
+{
+    text-decoration: underline;
+}
+
+h1
+{
+    text-align: center;
+}
+
+
+h3
+{
+    text-decoration: underline;
 }
